# aco_success_report_poc

./: .env.example  .gitignore  README.md  final_report_test_data2_20250805T074528Z.txt  final_report_test_data2_20250805T075145Z.txt  pyproject.toml
knowledge/: user_preference.txt
schemas/: analyzer_insights.schema.json  stories_data.schema.json
src/aco_report_poc_crew/: __init__.py  config.py  crew.py  debug.py  jsonparser.py  main.py
src/aco_report_poc_crew/config/: agents.yaml  tasks.yaml
src/aco_report_poc_crew/data/: test_data1.json  test_data2.json
src/aco_report_poc_crew/tools/: __init__.py  baseline_variance.py  compliance_linter.py  delta_calc.py  json_schema_check.py  reference_matcher.py  significant_flag.py
