[project]
name = "aco_report_poc_crew"
version = "0.1.0"
description = "ACO_Report_POC_crew using crewAI"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.152.0,<1.0.0",
]

[project.scripts]
aco_report_poc_crew = "aco_report_poc_crew.main:run"
run_crew = "aco_report_poc_crew.main:run"
train = "aco_report_poc_crew.main:train"
replay = "aco_report_poc_crew.main:replay"
test = "aco_report_poc_crew.main:test"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
